<resources>
    <string name="app_name">Коригувальник</string>
    <string name="milsExMessage">Формат вводу для кутів "х-хх"</string>
    <string name="numExMessage">Корректно заповніть необхідні поля</string>

    <!-- String Resourses for testing RecyclerView -->

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <string-array name="topics">
        <item>Загальні відомості</item>
        <item>Теорія тисячної</item>
        <item>Пристрілка з далекоміром</item>
        <item>Пристрілка з секундоміром</item>
        <item>Пристрілка за СЗР</item>
        <item>Пристрілка з спряженими спостереженнями</item>
        <item>Пристрілка за сторонами світу</item>
    </string-array>

    <string-array name="adjustmentTasks">
        <item>З далекоміром</item>
        <item>З спряженими спостереженнями</item>
        <item>За сторонами світу</item>
    </string-array>
    <!-- String Resourses for activity_login layout -->
    <string name="loginActMainText">Увійдіть в обліковий запис \n або створіть новий</string>
    <string name="loginActInputNewEditText">Введіть новий логін</string>
    <string name="loginActSelectEditText">Виберіть існуючий</string>
    <string name="loginActYetCheckText">Вже маю</string>
    <string name="loginActPassEditText">Введіть пароль</string>
    <string name="loginActPassRepEditText">Підтвердіть пароль</string>
    <string name="loginActButtonText">Увійти</string>
    <string name="loginActInputAllToastMessage">Для створення нового облікового запису заповніть всі поля</string>
    <string name="loginActSecondPassErrorMessage">При повторному введені паролю допущено помилку</string>
    <string name="loginActDublicateLoginErrorMessage">Такий позивний вже зареєстровано</string>
    <string name="loginActSelectLoginMessage">Виберіть позивний</string>
    <string name="loginActInputPassMessage">Введіть пароль</string>
    <string name="loginActWrongPassMessage">Невірний пароль!</string>
    <string name="loginActInfoMessage">Автори додатку:\nПрограмування: друг Рудольф\nТеорія і консультації: капітан ЗСУ друг Арт\n\n
        Додаток повністю автономний і локальний, не вкористовує підключення до мережі, зберігає дані виключно на пристрої.\n\nЗауваження і побажання прошу надсилати на пошту eol.darkelf13@gmail.com</string>

    <string name="rangPrepMainText">Введіть необхідні дані</string>
    <string name="rangPrepDistCoefETHint">Коеф. віддалення</string>
    <string name="rangPrepProtStepETHint">Крок кутоміра</string>
    <string name="rangPrepScaleETHint">∆П на 100 м</string>
    <string name="rangPrepScaleCBText">Не потрібна</string>
    <string name="rangPrepCheckButText">Перевірити</string>
    <string name="rangPrepGoButText">До пристрілки</string>
    <string name="rangPrepNotCheckedMessage">Перед пристрілкою перевірте корректність необхідних коефіціентів</string>

    <string name="dualPrepLeftCoefHint">Коеф.лівого</string>
    <string name="dualPrepRighCoefHint">Коеф.правого</string>
    <string name="dualPrepMainFPText">Основний КСП</string>
    <string name="dualPrepHandFPText">Положення ВП</string>
    <string name="dualPrepMainLeftFPRadioText">Лівий</string>
    <string name="dualPrepMainRightFPRadioText">Правий</string>
    <string name="dualPrepHandLeftFPRadioText">Зліва</string>
    <string name="dualPrepHandRightFPRadioText">Зправа</string>

    <string name="worldSidesPrepMilFrameText">Метрів на 0-01</string>
    <string name="worldSidesPrepBlankButtText">Бланк пристрлки</string>

    <string name="adjDistSwitchText">Дальність розриву</string>
    <string name="adjScaleSwitchText">Ділення прицілу</string>
    <string name="adjGetBurstButtText">Отримати</string>
    <string name="adjCorrButtText">Коригувати</string>
    <string name="adjWithoutCorrCBText">Без коректури</string>
    <string name="adjLessRBText">Менше</string>
    <string name="adjMoreRBText">Більше</string>
    <string name="adjAngCorrETHintText">Тисячних</string>
    <string name="adjScaleCorrETHintText">Поділок прицілу</string>
    <string name="adjMetersCorrETHintText">Метрів</string>
    <string name="adjRightRBText">Правіше</string>
    <string name="adjLeftRBText">Лівіше</string>
    <string name="adjInputTVText">Введіть корректури</string>
    <string name="adjScaleNotAvailableMessage">∆П на 100 м не задано. Режим недоступний.</string>
    <string name="adjStatisticMenuItemText">Статистика вправ</string>
    <string name="adjQuitMenuItemText">Вийти</string>
    <string name="adjGoTheoryMenuItemText">До теорії</string>


    <!-- String Resourses for activity_selection layout -->
    <string name="SelActMainText">Виберіть тему зайняття та артилерійську систему</string>
    <string name="selActSelArtsysTex">Виберіть артсистему:</string>
    <string name="selActSelAdjText">Виберіть пристрілку:</string>
    <string name="selActGoExButtonText">Перейти до задачі</string>
    <string name="selActNewExText">Створити задачу</string>
    <string name="selActTheorButText">ТЕОРІЯ</string>
    <string name="selActMilButtText">Задачі з тисячними</string>
    <string name="selActDelMenuItemText">Видалити аккаунт</string>
    <string name="selActChangeMenuItemText">Змінити аккаунт</string>

    <string name="distanceMilsTaskHint">Введіть дистанцію</string>
    <string name="distanceMilsStartButtonText">Отримати</string>
    <string name="distanceMilsCheckButtonText">Перевірити</string>
    <string name="distanceMilsStartText">Отримайте задачу</string>

    <string name="creatFragCommDistSelectionText">Виберіть Дк</string>
    <string name="creatFragFireDistSelectionText">Виберіть Дц</string>
    <string name="creatFragParalSelectionText">Виберіть ПЗ</string>



</resources>
