<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".frontend.MilTaskActivity"
    >

    <!-- tools:context=".AdjustmentActivity" было в теге выше -->

    <item android:id="@+id/milStatisticMenuItem"
        android:title="@string/adjStatisticMenuItemText"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_equalizer_black_24dp"/>

    <item android:id="@+id/milGoTheoryMenuItem"
        android:title="@string/adjGoTheoryMenuItemText"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_go_theory_24dp"/>

    <item android:id="@+id/milQuitMenuItem"
        android:title="@string/adjQuitMenuItemText"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit_24dp"/>
</menu>