<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.WorldSidesPrepareFragment"
    android:id="@+id/worldSidesPrepFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@color/colorLoginFrame"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="Adjustment task description"
            android:id="@+id/worldSidesPrepDescrText"
            android:layout_gravity="center"
            style="@style/CustomTextViewForFrameStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rangPrepMainText"
            android:id="@+id/textView6"
            android:layout_gravity="center"
            style="@style/CustomTextViewForFrameStyle"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/worldSidesPrepMilFrameText"
                android:id="@+id/worldSidesPrepMetPerMilET"
                android:layout_weight="1"
                android:inputType="number"
                android:ems="10"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rangPrepScaleCBText"
                android:id="@+id/worldSidesPrepCB"
                android:layout_weight="1"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/rangPrepScaleETHint"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/worldSidesPrepDeltaET"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rangPrepCheckButText"
                android:id="@+id/worldSidesPrepCheckBut"
                android:layout_weight="1"
                style="@style/CustomButtonForFramesStyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rangPrepGoButText"
                android:id="@+id/worldSidesPrepGoBut"
                android:layout_weight="1"
                style="@style/CustomButtonForFramesStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/worldSidesChangeBut"
                android:layout_weight="1"
                style="@style/CustomButtonForFramesStyle"
                android:src="@drawable/ic_change_task_button"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
