<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.SelectionActivity"
    android:background="@drawable/backgound_map">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:id="@+id/toolBar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/toolBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/frame_background"
            android:id="@+id/linearLayout2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/selActSelArtsysTex"
                    android:id="@+id/textView2"
                    style="@style/CustomTextViewForFrameStyle"
                    android:layout_gravity="center"/>

                <Spinner
                    android:id="@+id/selSystemSpinner"
                    style="@style/CustomSpinnerForFramesStyle" />

                <Button
                    style="@style/CustomButtonForFramesStyle"
                    android:text="@string/selActGoExButtonText"
                    android:id="@+id/selGoToTaskButton"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:drawableStart="@drawable/ic_go_task_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/selActSelAdjText"
                    android:id="@+id/textView3"
                    style="@style/CustomTextViewForFrameStyle"
                    android:layout_gravity="center"/>

                <Spinner
                    android:id="@+id/selAdjSpinner"

                    style="@style/CustomSpinnerForFramesStyle" />

                <Button
                    android:text="@string/selActNewExText"
                    android:id="@+id/selCustomTaskButton"
                    style="@style/CustomButtonForFramesStyle"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:drawableStart="@drawable/ic_create_task_color_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button

                    android:text="@string/selActTheorButText"
                    android:id="@+id/selTheoryButton"
                    android:drawableStart="@drawable/ic_theory_black_24dp"
                    android:layout_weight="1"
                    style="@style/CustomButtonForFramesStyle"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:text="@string/selActMilButtText"
                    android:id="@+id/selMilsTaskButton"
                    android:layout_weight="1"
                    style="@style/CustomButtonForFramesStyle"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:drawableStart="@drawable/ic_mil_black_24dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
